// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Chapter /> Should match snapshot for active chapter 1`] = `
<DocumentFragment>
  <a
    class="chapter-box"
  >
    <span
      class="active-chapter"
    >
      1
    </span>
  </a>
</DocumentFragment>
`;

exports[`<Chapter /> Should match snapshot for inactive chapter 1`] = `
<DocumentFragment>
  <a
    class="chapter-box"
    href=""
  >
    <span>
      1
    </span>
  </a>
</DocumentFragment>
`;
